se colocan los archivos js dentro de la carpeta Js

--- a/html/accesorios.html
+++ b/html/accesorios.html
@@ -335,7 +335,7 @@
     </footer>
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
-    <script src="../accesorios.js" type="text/javascript"></script>
+    <script src="../js/accesorios.js" type="text/javascript"></script>
 </body>
 
 </html>
