--- a/html/ofertas.html
+++ b/html/ofertas.html
@@ -343,7 +343,7 @@
     </footer>
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
-    <script src="../ofertas.js" type="text/javascript"></script>
+    <script src="../js/ofertas.js" type="text/javascript"></script>
 </body>
 
 </html>
