--- a/html/tecnologias.html
+++ b/html/tecnologias.html
@@ -338,7 +338,7 @@
     </footer>
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
-    <script src="../tecnologias.js" type="text/javascript"></script>
+    <script src="../js/tecnologias.js" type="text/javascript"></script>
 </body>
 
 </html>
