--- a/html/contacto.html
+++ b/html/contacto.html
@@ -185,7 +185,7 @@
     </footer>
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
-    <script src="../contacto.js" type="text/javascript"></script>
+    <script src="../js/contacto.js" type="text/javascript"></script>
 </body>
 
 </html>
