--- a/html/electrodomesticos.html
+++ b/html/electrodomesticos.html
@@ -331,7 +331,7 @@
     </footer>
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
-    <script src="../electrodomesticos.js" type="text/javascript"></script>
+    <script src="../js/electrodomesticos.js" type="text/javascript"></script>
 </body>
 
 </html>
