--- a/html/listaDeseos.html
+++ b/html/listaDeseos.html
@@ -235,7 +235,7 @@
     </footer>
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
-    <script src="../listaDeDeseos.js" type="text/javascript"></script>
+    <script src="../js/listaDeDeseos.js" type="text/javascript"></script>
 </body>
 
 </html>
