--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
     <script src="productosCargadosAlSistema.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
     <script src="clasesObjetos.js" type="text/javascript"></script>
     <script src="indexIncorporacionEventos.js" type="text/javascript"></script>
 </body>
