--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@
 
     <!--------------------------------------------------------- BOTON SUBIR------------------------------------------------------------------------------->
     <script src="productosCargadosAlSistema.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/javascript"></script>
+    <script src="productosCargadosAlSistema.json" type="text/javascript"></script>
+    <script src="js/index2.js" type="text/javascript"></script>
     <script src="clasesObjetos.js" type="text/javascript"></script>
 </body>
 
